<resources>
    <string name="app_name">Admin</string>
	<string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="login">Login</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="please_enter_new_password">Please enter New Password</string>
    <string name="login1">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="create_new_account">Create new Account</string>
    <string name="name">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="new_password">New Password</string>
    <string name="send">SEND</string>
    <string name="email">Email</string>
    <string name="back_button">ㅤ</string>
</resources>