<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <EditText
        android:id="@+id/email3"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:autofillHints="@string/prompt_email"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/forgot_password1"
        android:textColor="#000000"
        android:textSize="30.9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterEmail3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/please_enter_email"
        app:layout_constraintBottom_toTopOf="@+id/email3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sendbutton"
        android:layout_width="148dp"
        android:layout_height="56dp"
        android:layout_marginStart="131dp"
        android:layout_marginBottom="88dp"
        android:fontFamily="@font/poppins"
        android:text="CHECK"
        android:textSize="18sp"
        android:background="@drawable/shaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="57dp"
        android:layout_height="50dp"
        android:background="@drawable/back_logo"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

</androidx.constraintlayout.widget.ConstraintLayout>